feat: 🎸 Добавил разметку

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,28 @@
 })
 
 <body>
+	<header class="page-header">
+		<nav class="main-nav"></nav>
+	</header>
+	<main class="page-content">
+		<div class="heading">
+			<div class="heading__slider swiper">
+				<div class="heading__slider-wrapper swiper-wrapper">
+					<div class="heading__slider-item swiper-slide">
+						<img class="heading__slider-img" src="img/image/design/heading-slide-1.jpg" alt="Слайд-1">
+					</div>
+				</div>
+			</div>
+			<div class="heading__info">
+				<h1 class="heading__info-title base-title">Приглашаем вас посетить наш ресторан с изысканной кухней</h1>
+				<button class="heading__info-button order-button base-button" id="open-modal">
+					<span class="order-button__text">Забронировать</span>
+				</button>
+			</div>
+			button.heading__move-button
+		</div>
+	</main>
+	<footer class="page-footer"></footer>
 	<script src="./js/index.min.js"></script>
 </body>
 
