--- a/index.html
+++ b/index.html
@@ -75,16 +75,16 @@
 				</div>
 			</div>
 			<div class="heading__info">
-				<h1 class="heading__info-title base-title">Приглашаем вас посетить наш ресторан с изысканной кухней</h1>
+				<h1>Приглашаем вас посетить<br> наш ресторан с<br> изысканной кухней</h1>
 				<button class="heading__info-button order-button base-button" id="open-modal">
 					<span class="order-button__text">Забронировать</span>
 				</button>
+				<button class="heading__move-button move-button base-button">
+					<svg class="move-button__arrow-icon" width="15" height="63" alt="">
+						<use href="img/icon/sprite.svg#arrow-icon"></use>
+					</svg>
+				</button>
 			</div>
-			<button class="heading__move-button move-button base-button">
-				<svg class="move-button__arrow-icon" width="15" height="63" alt="">
-					<use href="img/icon/sprite.svg#arrow-icon"></use>
-				</svg>
-			</button>
 		</div>
 	</main>
 	<footer class="page-footer"></footer>
