feat: 🎸 Добавил разметку, стилизацию, адаптив

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 	<header class="page-header">
 		<nav class="main-nav">
 			<div class="main-nav__container base-container">
-				<ul class="main-nav__mobile-menu base-list">
+				<ul class="main-nav__mobile-menu base-list" id="mobile-menu">
 					<li class="main-nav__menu-item">
 						<a class="main-nav__menu-link base-link" href="#">о ресторане</a>
 					</li>
@@ -42,7 +42,7 @@
 						<a class="main-nav__menu-link base-link" href="#">контакты</a>
 					</li>
 				</ul>
-				<button class="main-nav__burger base-button">
+				<button class="main-nav__burger base-button" id="burger">
 					<span class="main-nav__burger-line"></span>
 				</button>
 			</div>
