--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
 </head>
 
 
+<style>
+	.heading__slider-img {
+		transform: scale(2);
+	}
+</style>
+
 <body>
 	<header class="page-header">
 		<nav class="main-nav">
