--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,12 @@
 "title": "pipalounge"
 })
 
+<!-- <style>
+	.heading__slider-img {
+		transform: scale(1.5);
+	}
+</style> -->
+
 <body>
 	<header class="page-header">
 		<nav class="main-nav">
