--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 </head>
 
 
-<style>
+<!-- <style>
 	.heading__slider-img {
-		transform: scale(2);
+		transform: scale(1.5);
 	}
-</style>
+</style> -->
 
 <body>
 	<header class="page-header">
