--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
 		<section class="about">
 			<div class="about__container base-container">
 				<div class="about__subject">
-					<div class="about__subject-inner">
+					<div class="about__subject-inner about__desc">
 						<h2>О ресторане</h2>
 						<p>
 							Pipa Lounge  — новое место для ценителей 
@@ -99,7 +99,7 @@
 					</svg>
 				</button>
 				<div class="about__menu">
-					<div class="about__menu-inner">
+					<div class="about__menu-inner about__desc">
 						<h2>Меню Pipa Lounge</h2>
 						<p>Меню ресторана составляют блюда изысканной кухни, с 
 							большим выбором мясных блюд, приготовленных на открытом огне. 
