--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<link rel="apple-touch-icon" href="./img/favicon/favicon_180.png">
 	<link rel="manifest" href="./manifest.webmanifest">
 	<link href="./css/style.min.css" rel="stylesheet">
-	<title>pipalounge</title>
+	<title>Pipa Lounge</title>
 </head>
 
 
@@ -23,7 +23,9 @@
 	<section class="modal" id="modal">
 		<div class="modal__wrapper">
 			<div class="modal__inner">
-				<button class="modal__close" id="close-modal"></button>
+				<button class="modal__close-button base-button" id="close-modal">
+					<div class="modal__close-inner"></div>
+				</button>
 				<figure class="modal__inner-image base-figure">
 					<img class="modal__inner-img" src="img/image/design/modal-img.svg" width="50" height="70" alt="">
 				</figure>
@@ -43,6 +45,9 @@
 				</form>
 			</div>
 			<div class="modal__success">
+				<button class="modal__close-button base-button" id="close-modal">
+					<div class="modal__close-inner"></div>
+				</button>
 				<h2></h2>
 				<p></p>
 			</div>
@@ -123,16 +128,16 @@
 					<div class="about__subject-inner about__desc">
 						<h2 data-aos-duration="10000">О ресторане</h2>
 						<p data-aos-duration="10000">
-							Pipa Lounge  — новое место для ценителей 
-							прекрасных видом города, комфорта и изысканной кухни. 
-							Из наших окон открывается живописный вид на городской ландшафт. 
-							Просторный зал нашего ресторана вмещает около 150 гостей, а 
-							ещё 220 могут расположиться на террасе, что делает Pipa Lounge, 
-							идеальным местом для проведения незабываемых мероприятий, 
+							Pipa Lounge — новое место для ценителей
+							прекрасных видом города, комфорта и изысканной кухни.
+							Из наших окон открывается живописный вид на городской ландшафт.
+							Просторный зал нашего ресторана вмещает около 150 гостей, а
+							ещё 220 могут расположиться на террасе, что делает Pipa Lounge,
+							идеальным местом для проведения незабываемых мероприятий,
 							торжеств и банкета, детского праздника или просто дружеской вечеринки.<br>
 							<br>
-							Открытый камин в центре зала поможет нашим гостям насладиться домашним уютом. 
-							Любителям активного отдыха мы предложим развлечения в летней зоне под открытым 
+							Открытый камин в центре зала поможет нашим гостям насладиться домашним уютом.
+							Любителям активного отдыха мы предложим развлечения в летней зоне под открытым
 							небом, где ваши встречи наполнятся роматическими впечатлениями.
 						</p>
 					</div>
@@ -145,10 +150,10 @@
 				<div class="about__menu">
 					<div class="about__menu-inner about__desc">
 						<h2>Меню Pipa Lounge</h2>
-						<p>Меню ресторана составляют блюда изысканной кухни, с 
-							большим выбором мясных блюд, приготовленных на открытом огне. 
-							В распоряжении наших поваров специальная гриль-печь для 
-							приготовления сочного ароматного мяса и настоящая печь для 
+						<p>Меню ресторана составляют блюда изысканной кухни, с
+							большим выбором мясных блюд, приготовленных на открытом огне.
+							В распоряжении наших поваров специальная гриль-печь для
+							приготовления сочного ароматного мяса и настоящая печь для
 							приготовления пиццы.
 						</p>
 						<div class="about__menu-links">
