feat: 🎸 Добавил стилизацию, разметку, адаптив

--- a/src/index.html
+++ b/src/index.html
@@ -100,17 +100,17 @@
 				<button class="heading__info-button order-button base-button" id="open-modal">
 					<span class="order-button__text">Забронировать</span>
 				</button>
-				<button class="heading__move-button move-button base-button">
+				<a class="heading__move-button move-button base-link" href="#subject" data-aos-anchor-placement="bottom">
 					<svg class="move-button__arrow-icon" width="15" height="63" alt="">
 						<use href="img/icon/sprite.svg#arrow-icon"></use>
 					</svg>
-				</button>
+				</a>
 			</div>
 		</section>
 
-		<section class="about">
+		<section class="about" data-anchor="about">
 			<div class="about__container base-container">
-				<div class="about__subject">
+				<div class="about__subject" id="subject">
 					<div class="about__subject-inner about__desc">
 						<h2>О ресторане</h2>
 						<div class="about__subject-text">
@@ -130,12 +130,12 @@
 						</div>
 					</div>
 				</div>
-				<button class="about__move-button move-button base-button">
+				<a class="about__move-button move-button base-link" href="#menu">
 					<svg class="move-button__arrow-icon" width="15" height="63" alt="">
 						<use href="img/icon/sprite.svg#arrow-icon"></use>
 					</svg>
-				</button>
-				<div class="about__menu">
+				</a>
+				<div class="about__menu" id="menu">
 					<div class="about__menu-inner about__desc">
 						<h2>Меню Pipa Lounge</h2>
 						<div class="about__menu-text">
@@ -156,15 +156,15 @@
 						</div>
 					</div>
 				</div>
-				<button class="about__move-button move-button base-button">
+				<a class="about__move-button move-button base-link" href="#slider">
 					<svg class="move-button__arrow-icon" width="15" height="63" alt="">
 						<use href="img/icon/sprite.svg#arrow-icon"></use>
 					</svg>
-				</button>
+				</a>
 			</div>
 		</section>
 
-		<section class="food-slider">
+		<section class="food-slider" id="slider">
 			<div class="food-slider__container base-container">
 				<div class="food-slider__slider swiper">
 					<button class="food-slider__slider-button food-slider__slider-button--prev base-button">
@@ -195,39 +195,30 @@
 						</div>
 					</div>
 				</div>
-				<button class="food-slider__move-button move-button base-button">
+				<a class="food-slider__move-button move-button base-link" href="#contacts_info">
 					<svg class="move-button__arrow-icon" width="15" height="63" alt="">
 						<use href="img/icon/sprite.svg#arrow-icon"></use>
 					</svg>
-				</button>
+				</a>
 				<div class="food-slider__slider-pagination swiper-pagination"></div>
 			</div>
 		</section>
 
 		<section class="contacts">
 			<div class="contacts__container base-container">
-				<div class="contacts__info">
+				<div class="contacts__info" id="contacts_info">
 					<div class="contacts__info-inner">
 						<h2 class="contacts__info-title base-title">Контакты Pipa Lounge</h2>
 						<ul class="contacts__info-list base-list">
-							<li class="contacts__info-item">
-								<svg class="contacts__info-icon" width="20" height="20" alt="">
-									<use href="img/icon/sprite.svg#phone-icon"></use>
-								</svg>
+							<li class="contacts__info-item contacts__info-item--phone">
 								<a class="contacts__info-link base-link" href="tel:+17867881000">+17867881000</a>
 							</li>
-							<li class="contacts__info-item">
-								<svg class="contacts__info-icon" width="17" height="20" alt="">
-									<use href="img/icon/sprite.svg#map-icon"></use>
-								</svg>
+							<li class="contacts__info-item contacts__info-item--map">
 								<span class="contacts__info-text">
 									323 Sunny isles blvd 104, Sunny isles beach FL, 33160
 								</span>
 							</li>
-							<li class="contacts__info-item">
-								<svg class="contacts__info-icon" width="21" height="21" alt="">
-									<use href="img/icon/sprite.svg#time-icon"></use>
-								</svg>
+							<li class="contacts__info-item contacts__info-item--time">
 								<span class="contacts__info-text">
 									SU - TH 5pm-12am<br>
 									FR - SA 5pm-2am
@@ -237,17 +228,29 @@
 						<div class="contacts__info-links">
 							<a class="contacts__links-opentable base-link" href="#">Ссылка на opentable</a>
 							<ul class="contacts__links-list base-list">
-								<li class="contacts__links-item"><img class="contacts__links-img" src="img/image/content/socials-1.svg" width="30" height="30" alt=""></li>
-								<li class="contacts__links-item"><img class="contacts__links-img" src="img/image/content/socials-2.svg" width="30" height="30" alt=""></li>
-								<li class="contacts__links-item"><img class="contacts__links-img" src="img/image/content/socials-3.svg" width="30" height="30" alt=""></li>
+								<li class="contacts__links-item">
+									<a class="contacts__links-wrapper base-link" href="#">
+										<img class="contacts__links-img" src="img/image/content/socials-1.svg" width="30" height="30" alt="">
+									</a>
+								</li>
+								<li class="contacts__links-item">
+									<a class="contacts__links-wrapper base-link" href="#">
+										<img class="contacts__links-img" src="img/image/content/socials-2.svg" width="30" height="30" alt="">
+									</a>
+								</li>
+								<li class="contacts__links-item">
+									<a class="contacts__links-wrapper base-link" href="#">
+										<img class="contacts__links-img" src="img/image/content/socials-3.svg" width="30" height="30" alt="">
+									</a>
+								</li>
 							</ul>
 						</div>
-						<button class="contacts__order-button order-button base-button">
+						<button class="contacts__order-button order-button base-button" id="open-modal">
 							<span class="order-button__text">Забронировать</span>
 						</button>
 					</div>
 				</div>
-				<div class="contacts__map">
+				<div class="contacts__map" id="contacts_map">
 					<iframe class="contacts__map-inner" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3588.1420197271937!2d-80.1270204639762!3d25.93056118655225!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d9ad1a2772460d%3A0x4cdc4ee489089ae9!2s323%20Sunny%20Isles%20Blvd%20%23104%2C%20Sunny%20Isles%20Beach%2C%20FL%2033160%2C%20%D0%A1%D0%A8%D0%90!5e0!3m2!1sru!2sru!4v1663235069722!5m2!1sru!2sru" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 				</div>
 			</div>
