--- a/index.html
+++ b/index.html
@@ -271,7 +271,34 @@
 		</section>
 
 	</main>
-	<footer class="page-footer"></footer>
+	<footer class="page-footer">
+		<section class="footer-main">
+			<div class="footer-main__container base-container">
+				<a class="footer-main__logo-block base-link" href="#">
+					<figure class="footer-main__logo-image base-figure">
+						<img class="footer-main__logo-img" src="img/image/design/logo.svg" width="141" height="174" alt="website logo">
+					</figure>
+				</a>
+				<ul class="footer-main__nav-list base-list">
+					<li class="footer-main__nav-item"><a class="footer-main__nav-link base-link" id="open-modal">забронировать</a></li>
+					<li class="footer-main__nav-item"><a class="footer-main__nav-link base-link" href="#">о ресторане</a></li>
+					<li class="footer-main__nav-item"><a class="footer-main__nav-link base-link" href="#">меню</a></li>
+				</ul>
+			</div>
+		</section>
+		<section class="page-footer__underline">
+			<div class="page-footer__underline-container base-container">
+				<a class="page-footer__underline-link base-link" href="#">Соглашение на обработку персональных данных</a>
+				<a class="page-footer__underline-link base-link" href="#">Политика конфинденциальности</a>
+				<a class="page-footer__underline-madeby base-link" rel="noopener noreferrer" target="_blank" href="https://is-art.ru/">
+					<span class="page-footer__underline-madeby-text">Разработано</span>
+					<svg class="page-footer__underline-madeby-icon" width="53" height="22" alt="">
+						<use href="img/icon/sprite.svg#madeby-icon"></use>
+					</svg>
+				</a>
+			</div>
+		</section>
+	</footer>
 	<script src="./js/index.min.js"></script>
 </body>
 
