--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 						<a class="main-nav__menu-link base-link" href="#contacts_info">контакты</a>
 					</li>
 				</ul>
-				<a class="main-nav__logo-block base-link" href="#">
+				<a class="main-nav__logo-block base-link" href="index.html">
 					<figure class="main-nav__logo-image base-figure">
 						<img class="main-nav__logo-img" src="img/image/design/logo.svg" width="141" height="174" alt="website logo">
 					</figure>
@@ -224,7 +224,7 @@
 		<section class="contacts">
 			<div class="contacts__container base-container">
 				<div class="contacts__info" id="contacts_info">
-					<div class="contacts__info-inner">
+					<div class="contacts__info-inner" id="contacts_info_inner">
 						<button class="contacts__info-move base-button" id="contacts_info_move">
 							<svg class="contacts__arrow-icon" width="10" height="35" alt="">
 								<use href="img/icon/sprite.svg#arrow-icon"></use>
