--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 	<footer class="page-footer">
 		<section class="footer-main">
 			<div class="footer-main__container base-container">
-				<a class="footer-main__logo-block base-link" href="#header">
+				<a class="footer-main__logo-block base-link" href="#header" id="footer_logo">
 					<figure class="footer-main__logo-image base-figure">
 						<img class="footer-main__logo-img" src="img/image/design/logo.svg" width="141" height="174" alt="website logo">
 					</figure>
