--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 			</div>
 		</section>
 	</footer>
+	<script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
 	<script src="./js/index.min.js"></script>
 </body>
-
 </html>
